initial saveListings implementation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class ="container">
     <div class="header">
       <h1> Senior Opportunities</h1>
+      <p class="loggedIn" id="helloUser">Hello</p>
       <div class="row userContainer">
       <div class="col loggedIn">
         <a class="button" id="savedBtn" href="savedListings.html" alt="Saved Listings">Saved Listings</a>
