--- a/savedListings.html
+++ b/savedListings.html
@@ -16,34 +16,98 @@
     </div>
     <br>
     <hr/>
-    <div class = "savedListing">
+    <h1 class="noSaved">No saved listings</h1>
+    <div class = "savedListing" id="saved1">
       <img src="images/placeholder.jpg" width="200px"
-       height="200px" alt="Image Placeholder">
+       height="200px" alt="Image Placeholder" id="img1">
       <p>
-       <h3> PLACEHOLDER </h3>
+       <h3 id="title1"> PLACEHOLDER 1</h3>
        <!--More Info -->
        <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="list/PLACEHOLDER.html">More Info</a>
+        <a button class="btn btn-outline-primary btn-large" href="list/PLACEHOLDER.html" id="more1">More Info</a>
        <!--Contact -->
-        <a button class="btn btn-outline-primary btn-large" href="cont/PLACEHOLDER.html">Contact Organization</a>
+        <a button class="btn btn-outline-primary btn-large" href="cont/PLACEHOLDER.html" id="cont1">Contact Organization</a>
+         <a button class="btn btn-outline-primary btn-large" href="#" id="unsave1">Unsave</a>
        </div>
       </p>
     </div>
-    <div hidden class = "savedListing">
+    <div class = "savedListing" id="saved2">
       <hr/>
       <img src="images/placeholder.jpg" width="200px"
-       height="200px" alt="Image Placeholder">
+       height="200px" alt="Image Placeholder" id="img2">
       <p>
-       <h3> PLACEHOLDER </h3>
+       <h3 id="title2"> PLACEHOLDER 2</h3>
        <!--More Info -->
        <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="list/PLACEHOLDER.html">More Info</a>
+        <a button class="btn btn-outline-primary btn-large" href="list/PLACEHOLDER.html" id="more2">More Info</a>
        <!--Contact -->
-        <a button class="btn btn-outline-primary btn-large" href="cont/PLACEHOLDER.html">Contact Organization</a>
+        <a button class="btn btn-outline-primary btn-large" href="cont/PLACEHOLDER.html" id="cont2">Contact Organization</a>
+        <a button class="btn btn-outline-primary btn-large" href="#" id="unsave2">Unsave</a>
+       </div>
+      </p>
+    </div>
+    <div class = "savedListing" id="saved3">
+      <hr/>
+      <img src="images/placeholder.jpg" width="200px"
+       height="200px" alt="Image Placeholder" id="img3">
+      <p>
+       <h3 id="title3"> PLACEHOLDER 3</h3>
+       <!--More Info -->
+       <div class="button">
+        <a button class="btn btn-outline-primary btn-large" href="list/PLACEHOLDER.html" id="more3">More Info</a>
+       <!--Contact -->
+        <a button class="btn btn-outline-primary btn-large" href="cont/PLACEHOLDER.html"  id="cont3">Contact Organization</a>
+        <a button class="btn btn-outline-primary btn-large" href="#" id="unsave3">Unsave</a>
+       </div>
+      </p>
+    </div>
+    <div class = "savedListing" id="saved4">
+      <hr/>
+      <img src="images/placeholder.jpg" width="200px"
+       height="200px" alt="Image Placeholder"  id="img4">
+      <p>
+       <h3 id="title4"> PLACEHOLDER 4</h3>
+       <!--More Info -->
+       <div class="button">
+        <a button class="btn btn-outline-primary btn-large" href="list/PLACEHOLDER.html" id="more4">More Info</a>
+       <!--Contact -->
+        <a button class="btn btn-outline-primary btn-large" href="cont/PLACEHOLDER.html" id="cont4">Contact Organization</a>
+        <a button class="btn btn-outline-primary btn-large" href="" id="unsave4">Unsave</a>
+       </div>
+      </p>
+    </div>
+    <div class = "savedListing" id="saved5">
+      <hr/>
+      <img src="images/placeholder.jpg" width="200px"
+       height="200px" alt="Image Placeholder"  id="img5">
+      <p>
+       <h3 id="title5"> PLACEHOLDER 5</h3>
+       <!--More Info -->
+       <div class="button">
+        <a button class="btn btn-outline-primary btn-large" href="list/PLACEHOLDER.html" id="more5">More Info</a>
+       <!--Contact -->
+        <a button class="btn btn-outline-primary btn-large" href="cont/PLACEHOLDER.html" id="cont5">Contact Organization</a>
+        <a button class="btn btn-outline-primary btn-large" href="" id="unsave5">Unsave</a>
+       </div>
+      </p>
+    </div>
+    <div class = "savedListing" id="saved6">
+      <hr/>
+      <img src="images/placeholder.jpg" width="200px"
+       height="200px" alt="Image Placeholder"  id="img6">
+      <p>
+       <h3 id="title6"> PLACEHOLDER 6</h3>
+       <!--More Info -->
+       <div class="button">
+        <a button class="btn btn-outline-primary btn-large" href="list/PLACEHOLDER.html" id="more6">More Info</a>
+       <!--Contact -->
+        <a button class="btn btn-outline-primary btn-large" href="cont/PLACEHOLDER.html"  id="cont6">Contact Organization</a>
+        <a button class="btn btn-outline-primary btn-large" href="" id="unsave6">Unsave</a>
        </div>
       </p>
     </div>
   </div>
-  <script type="text/javascript" src="js/jobResults.js"></script>
+  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="js/savedListings.js"></script>
 </body>
 </html>
