Need to disable save btns after user clicks

--- a/jobResults.html
+++ b/jobResults.html
@@ -12,7 +12,7 @@
     <center>
       <div class="container">
         <!-- Header-->
-        <h1 class ="title"> Job Opportunities Results </h1>
+        <h1 class ="title">Job Opportunities</h1>
         <h4> Showing 3 Results </h4>
       </div>
       <br>
