--- a/savedListings.html
+++ b/savedListings.html
@@ -5,14 +5,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Saved Listings</title>
+  <title>Your Saved Listings</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/savedListings.css">
 </head>
 <body>
   <div class="container">
-    <div class="header">
+    <div class="header justify-content-center">
       <h1 class ="title">Saved Listings</h1>  
+      <a class="button" href="index.html" alt="Home" id="homeBtn">Home </a>
     </div>
     <br>
     <hr/>
