--- a/volResults.html
+++ b/volResults.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Job Listings</title>
+    <title>Volunteer Opportunities</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/volResults.css">
   </head>
@@ -12,7 +12,7 @@
     <center>
       <div class="container">
         <!-- Header-->
-        <h1 class ="title"> Volunteer Opportunities Results </h1>
+        <h1 class ="title"> Volunteer Opportunities </h1>
         <h4> Showing 5 Results </h4>
       </div>
       <br>
